[package]
name = "nik-first-roguelike"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Sabbatini <nik.code.things@gmail.com>"]

[dependencies]
bevy = "0.11"
bevy-inspector-egui = "0.19"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }


[profile.dev.package."*"]
opt-level = 3
